--- a/Example2.css
+++ b/Example2.css
@@ -23,7 +23,7 @@ h1 {
 	font-family: "Catamaran";
 	font-variant: small-caps;
 	font-size: 60px;
-	color: #FFC0CB;
+	color: #b10085;
 	font-weight: 900;
 	margin: 0px 0px 30px 0px;
 }
