--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
 
 /* Set the background color for my page: */
 body{
-    background-color: rgb(233, 233, 233);
+    background-color: beige;
  
 }
 
@@ -24,18 +24,18 @@ h1, h3, p{
 .myWeek1{
     margin: auto;
     max-width: 600px;
-    background-color: bisque;
+    background-color: seagreen;
 }
 
 
 /* Set the apperance of the class, chart */
 .chart{
-    background-color: orange;
-    width:330px;
+    background-color: white;
+    width:430px;
     border-width: 10px;
     border-style: solid;
     border-radius: 5px;
-    border-color: red;
+    border-color: green;
 
     
 }
