--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
 
 /* Set the background color for my page: */
 body{
-    background-color: beige;
+    background-color:rgb(245. 245, 220);
  
 }
 
@@ -17,25 +17,25 @@ body{
 /* Choose the appearance of the tags, h1, h3 and p: */
 h1, h3, p{
     color:rgb(17, 17, 17);
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
+    font-family:'Roboto', sans-serif;
+    text-align:center;
 }
     
 .myWeek1{
-    margin: auto;
-    max-width: 600px;
-    background-color: seagreen;
+    margin:auto;
+    max-width:600px;
+    background-color:rgb(46, 139, 87);
 }
 
 
 /* Set the apperance of the class, chart */
 .chart{
-    background-color: white;
+    background-color:rgb(255, 255, 255);
     width:430px;
-    border-width: 10px;
-    border-style: solid;
-    border-radius: 5px;
-    border-color: green;
+    border-width:10px;
+    border-style:solid;
+    border-radius:5px;
+    border-color:rgb(0, 128, 0);
 
     
 }
