--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ h1, h3, p{
 
 /* Style the links inside the navigation bar */
 .topnav a {
-  float: left;
+  float: centre;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
