--- a/portfolio.css
+++ b/portfolio.css
@@ -53,7 +53,7 @@
       color: rgb(59, 60, 61);
       margin-top: -30px !important;
       font-size: 18px !important;
-      font-family: 'Raleway', sans-serif !important;
+      font-family: 'Roboto', sans-serif !important;
     }
 
 
